--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My App</title>
+    login form
   </head>
   <body>
     This is my app too :-) !!!
